2021-09-07  Fujii Hironori  <Hironori.Fujii@sony.com>

        [Win] TestWebKitAPI.WebKit.DidNotHandleKeyDown is failing
        https://bugs.webkit.org/show_bug.cgi?id=229927

        Reviewed by Don Olmstead.

        TestWebKitAPI::Util::isKeyDown was not implemented

        * TestWebKitAPI/CMakeLists.txt: Added Tests/WebKit/DidNotHandleKeyDown.cpp.
        * TestWebKitAPI/Tests/WebKit/DidNotHandleKeyDown.cpp: GTK and WPE ports fail the test. Skip it.
        * TestWebKitAPI/win/PlatformUtilitiesWin.cpp:
        (TestWebKitAPI::Util::isKeyDown): Implemented.

2021-09-07  Fujii Hironori  <Hironori.Fujii@sony.com>

        [Win] PlatformWebView::simulateSpacebarKeyPress sends wrong scan code for the space key and Alt key
        https://bugs.webkit.org/show_bug.cgi?id=229928

        Reviewed by Don Olmstead.

        PlatformWebView::simulateSpacebarKeyPress sent 39, but it should be 0x39.
        PlatformWebView::simulateAltKeyPress sent 38, but it should be 0x38.

        * TestWebKitAPI/win/PlatformWebViewWin.cpp:
        (TestWebKitAPI::PlatformWebView::simulateSpacebarKeyPress):
        (TestWebKitAPI::PlatformWebView::simulateAltKeyPress):

2021-09-07  Jonathan Bedard  <jbedard@apple.com>

        [git-webkit] Support callbacks as main arguments (Follow-up fix)
        https://bugs.webkit.org/show_bug.cgi?id=229739
        <rdar://problem/82597266>

        Unreviewed follow-up fix.

        * Scripts/libraries/webkitscmpy/setup.py: Bump version.
        * Scripts/libraries/webkitscmpy/webkitscmpy/__init__.py: Ditto.
        * Scripts/libraries/webkitscmpy/webkitscmpy/local/git.py:
        (Git.url): For compatibility, use git config directly.

2021-09-07  Jonathan Bedard  <jbedard@apple.com>

        [git-webkit] Support callbacks as main arguments
        https://bugs.webkit.org/show_bug.cgi?id=229739
        <rdar://problem/82597266>

        Reviewed by Dewei Zhu.

        * Scripts/git-webkit: